--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -127,7 +127,7 @@
     <value>Key</value>
   </data>
   <data name="ActionName_Loop" xml:space="preserve">
-    <value>Loop sequence</value>
+    <value>Repeat sequence</value>
   </data>
   <data name="ActionName_PictureWait" xml:space="preserve">
     <value>Wait for picture</value>
@@ -224,6 +224,27 @@
   </data>
   <data name="title_SaveSequenceDialog" xml:space="preserve">
     <value>Save sequence</value>
+  </data>
+  <data name="toolTip_Button_AddAction" xml:space="preserve">
+    <value>Add action</value>
+  </data>
+  <data name="toolTip_Button_DeleteAction" xml:space="preserve">
+    <value>Delete selected action</value>
+  </data>
+  <data name="toolTip_Button_DeleteSequence" xml:space="preserve">
+    <value>Delete sequence</value>
+  </data>
+  <data name="toolTip_Button_EditAction" xml:space="preserve">
+    <value>Edit selected action</value>
+  </data>
+  <data name="toolTip_Button_SaveSequence" xml:space="preserve">
+    <value>Save sequence</value>
+  </data>
+  <data name="toolTip_Button_StartBot" xml:space="preserve">
+    <value>Start Bot</value>
+  </data>
+  <data name="toolTip_Button_StopBot" xml:space="preserve">
+    <value>Stop Bot</value>
   </data>
   <data name="tsm_About" xml:space="preserve">
     <value>About</value>
