--- a/Tao Bot Maker/Properties/strings.fr.resx
+++ b/Tao Bot Maker/Properties/strings.fr.resx
@@ -264,6 +264,9 @@
   <data name="tsm_File_Exit" xml:space="preserve">
     <value>Fermer</value>
   </data>
+  <data name="tsm_File_New" xml:space="preserve">
+    <value>Nouveau</value>
+  </data>
   <data name="tsm_File_Save" xml:space="preserve">
     <value>Enregistrer</value>
   </data>
