--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -264,6 +264,9 @@
   <data name="tsm_File_Exit" xml:space="preserve">
     <value>Exit</value>
   </data>
+  <data name="tsm_File_New" xml:space="preserve">
+    <value>New</value>
+  </data>
   <data name="tsm_File_Save" xml:space="preserve">
     <value>Save</value>
   </data>
