--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -123,6 +123,9 @@
   <data name="ActionName_IfPicture" xml:space="preserve">
     <value>If picture</value>
   </data>
+  <data name="ActionName_ImageSearch" xml:space="preserve">
+    <value>Image search</value>
+  </data>
   <data name="ActionName_Key" xml:space="preserve">
     <value>Key</value>
   </data>
@@ -130,7 +133,7 @@
     <value>Repeat sequence</value>
   </data>
   <data name="ActionName_PictureWait" xml:space="preserve">
-    <value>Wait for picture</value>
+    <value>Wait for image</value>
   </data>
   <data name="ActionName_Sequence" xml:space="preserve">
     <value>Sequence</value>
@@ -145,16 +148,16 @@
     <value>Cancel</value>
   </data>
   <data name="button_ClearZone" xml:space="preserve">
-    <value>Clear zones</value>
+    <value>Clear area</value>
   </data>
   <data name="button_FindImage" xml:space="preserve">
-    <value>Find picture</value>
+    <value>Find image</value>
   </data>
   <data name="button_OK" xml:space="preserve">
     <value>OK</value>
   </data>
   <data name="button_Picture" xml:space="preserve">
-    <value>Choose picture</value>
+    <value>Choose image</value>
   </data>
   <data name="button_ShowDrawingArea" xml:space="preserve">
     <value>Show area</value>
