--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -147,7 +147,7 @@
   <data name="button_Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
-  <data name="button_ClearZone" xml:space="preserve">
+  <data name="button_ClearArea" xml:space="preserve">
     <value>Clear area</value>
   </data>
   <data name="button_FindImage" xml:space="preserve">
@@ -168,11 +168,23 @@
   <data name="label_Ctrl" xml:space="preserve">
     <value>Ctrl</value>
   </data>
+  <data name="label_DoubleClick" xml:space="preserve">
+    <value>Double click</value>
+  </data>
+  <data name="label_Drag" xml:space="preserve">
+    <value>Drag</value>
+  </data>
+  <data name="label_DragSpeed" xml:space="preserve">
+    <value>Drag speed : </value>
+  </data>
   <data name="label_Key" xml:space="preserve">
     <value>Key</value>
   </data>
   <data name="label_LeftClick" xml:space="preserve">
     <value>Left click</value>
+  </data>
+  <data name="label_MiddleClick" xml:space="preserve">
+    <value>Middle click</value>
   </data>
   <data name="label_RepetitionNumber" xml:space="preserve">
     <value>Number of repetitions</value>
@@ -212,6 +224,100 @@
   </data>
   <data name="label_WaitTime" xml:space="preserve">
     <value>Delay (ms)</value>
+  </data>
+  <data name="log_ActionAdded" xml:space="preserve">
+    <value>Action added : </value>
+  </data>
+  <data name="log_ActionDeleted" xml:space="preserve">
+    <value>Action deleted :  </value>
+  </data>
+  <data name="log_ActionEdited" xml:space="preserve">
+    <value>Action edited : </value>
+  </data>
+  <data name="log_ActionView_AddMode" xml:space="preserve">
+    <value>ActionView dialog Add Mode opened</value>
+  </data>
+  <data name="log_ActionView_Closed" xml:space="preserve">
+    <value>ActionView dialog closed</value>
+  </data>
+  <data name="log_ActionView_EditMode" xml:space="preserve">
+    <value>ActionView dialog Edit Mode opened</value>
+  </data>
+  <data name="log_ActionView_SelectedPanel" xml:space="preserve">
+    <value>Panel selected : </value>
+  </data>
+  <data name="log_ApplicationClosed" xml:space="preserve">
+    <value>Application closed</value>
+  </data>
+  <data name="log_ApplicationInitialized" xml:space="preserve">
+    <value>Application ready to use</value>
+  </data>
+  <data name="log_AppliedTheme" xml:space="preserve">
+    <value>Theme applied</value>
+  </data>
+  <data name="log_DialogResult_Cancel" xml:space="preserve">
+    <value>DialogResult : CANCEL</value>
+  </data>
+  <data name="log_DialogResult_None" xml:space="preserve">
+    <value>DialogResult : NONE</value>
+  </data>
+  <data name="log_DialogResult_Ok" xml:space="preserve">
+    <value>DialogResult : OK</value>
+  </data>
+  <data name="log_Loaded_Actions" xml:space="preserve">
+    <value>Actions loaded</value>
+  </data>
+  <data name="log_Loading_Action" xml:space="preserve">
+    <value>Loading action : </value>
+  </data>
+  <data name="log_Loading_Actions" xml:space="preserve">
+    <value>Loading actions</value>
+  </data>
+  <data name="log_Loading_Sequence" xml:space="preserve">
+    <value>Loading sequence : </value>
+  </data>
+  <data name="log_Loading_Sequence_Fail" xml:space="preserve">
+    <value>Fail to load sequence : </value>
+  </data>
+  <data name="log_Loading_Sequence_Success" xml:space="preserve">
+    <value>Sequence loaded</value>
+  </data>
+  <data name="log_LocalizationUpdated" xml:space="preserve">
+    <value>Localization updated</value>
+  </data>
+  <data name="log_Sequence_Deleted" xml:space="preserve">
+    <value>Sequence deleted : </value>
+  </data>
+  <data name="log_Sequence_Saved" xml:space="preserve">
+    <value>Sequence saved : </value>
+  </data>
+  <data name="log_SettingLanguage" xml:space="preserve">
+    <value>Setting language to :  </value>
+  </data>
+  <data name="log_SettingSavelogs" xml:space="preserve">
+    <value>Setting "SaveLog" value : </value>
+  </data>
+  <data name="log_UpdateButtonState_Bot" xml:space="preserve">
+    <value>"Bot" button state updated</value>
+  </data>
+  <data name="log_UpdateButtonState_Edit" xml:space="preserve">
+    <value>"Edit" button state updated</value>
+  </data>
+  <data name="log_UpdateButtonState_Hotkey" xml:space="preserve">
+    <value>"Hotkey" button state updated</value>
+  </data>
+  <data name="log_UpdateButtonState_Language" xml:space="preserve">
+    <value>"Language" button state updated</value>
+  </data>
+  <data name="log_UpdateButtonState_SaveLogs" xml:space="preserve">
+    <value>"Savelogs" button state updated</value>
+  </data>
+  <data name="log_UpdateButtonState_Theme" xml:space="preserve">
+    <value>"Theme" button state updated</value>
+  </data>
+  <data name="MessageBox_WarningDeleteSequence" xml:space="preserve">
+    <value>"Warning : This will delete the sequence entirely.
+Do you want to proceed ?</value>
   </data>
   <data name="tab_NewSequence" xml:space="preserve">
     <value>New sequence</value>
