--- a/Tao Bot Maker/Properties/strings.fr.resx
+++ b/Tao Bot Maker/Properties/strings.fr.resx
@@ -144,6 +144,42 @@
   <data name="ActionName_Wait" xml:space="preserve">
     <value>Attendre</value>
   </data>
+  <data name="action_Click_ToString" xml:space="preserve">
+    <value>Action : Clic</value>
+  </data>
+  <data name="action_ErrorMessage_ClickNotSelected" xml:space="preserve">
+    <value>Erreur : Un bouton de clic doit être sélectionné</value>
+  </data>
+  <data name="action_ErrorMessage_DragSpeedWrongInterval" xml:space="preserve">
+    <value>Erreur : La vitesse doit être compris entre 1 et 5</value>
+  </data>
+  <data name="action_ErrorMessage_InvalidCoords" xml:space="preserve">
+    <value>Erreur : Les coordonnées doivent être comprises entre -999999 et 999999</value>
+  </data>
+  <data name="action_Member_Click" xml:space="preserve">
+    <value>Click</value>
+  </data>
+  <data name="action_Member_DragSpeed" xml:space="preserve">
+    <value>Vitesse</value>
+  </data>
+  <data name="action_Member_IsDoubleClick" xml:space="preserve">
+    <value>Double clic</value>
+  </data>
+  <data name="action_Member_IsDrag" xml:space="preserve">
+    <value>Glisser</value>
+  </data>
+  <data name="action_Member_X1" xml:space="preserve">
+    <value>X1</value>
+  </data>
+  <data name="action_Member_X2" xml:space="preserve">
+    <value>X2</value>
+  </data>
+  <data name="action_Member_Y1" xml:space="preserve">
+    <value>Y1</value>
+  </data>
+  <data name="action_Member_Y2" xml:space="preserve">
+    <value>Y2</value>
+  </data>
   <data name="button_Cancel" xml:space="preserve">
     <value>Annuler</value>
   </data>
