--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -180,6 +180,9 @@
   <data name="action_ErrorMessage_ThresholdWrongInterval" xml:space="preserve">
     <value>Error : Threshold must be a number between 0 and 255</value>
   </data>
+  <data name="action_ErrorMessage_WaitTime" xml:space="preserve">
+    <value>Error : Delay must be between 1 and 999999</value>
+  </data>
   <data name="action_Member_Click" xml:space="preserve">
     <value>Click</value>
   </data>
@@ -215,6 +218,9 @@
   </data>
   <data name="action_Member_Threshold" xml:space="preserve">
     <value>Threshold</value>
+  </data>
+  <data name="action_Member_WaitTime" xml:space="preserve">
+    <value>Delay (ms)</value>
   </data>
   <data name="action_Member_X1" xml:space="preserve">
     <value>X1</value>
