--- a/Tao Bot Maker/Properties/strings.fr.resx
+++ b/Tao Bot Maker/Properties/strings.fr.resx
@@ -411,6 +411,10 @@
   <data name="log_UpdateButtonState_Theme" xml:space="preserve">
     <value>"Theme" button state updated : </value>
   </data>
+  <data name="MessageBox_Error_LoadingSequence" xml:space="preserve">
+    <value>Impossible de charger la séquence.
+Le fichier est peut-être corrompu.</value>
+  </data>
   <data name="MessageBox_ImageAlreadyInFolder_Caption" xml:space="preserve">
     <value>Remplacer l'image ?</value>
   </data>
